<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ziqqi.viewmodel.BillingInfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BillingInformationActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="?android:attr/actionBarSize"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/billing_info"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_select_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:hint="@string/select_your_country"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_address_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/regular"
                android:hint="@string/address_details"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/regular"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/regular"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/regular"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/bold"
                android:text="@string/next"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </RelativeLayout>
</layout>