<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="PrivateResource">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/cardview_light_background"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingLeft="@dimen/_4sdp"
            android:paddingRight="@dimen/_4sdp"
            android:fontFamily="@font/regular"
            android:textColor="@color/colorLightText"
            android:text="@string/sort_by"
            android:layout_margin="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLightText"/>

        <RadioGroup
            android:id="@+id/rb_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:checked="true"
                android:fontFamily="@font/regular"
                android:theme="@style/RadioButtonTheme" />

            <RadioButton
                android:id="@+id/rb_price_low_to_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_low_to_high"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/regular"
                android:theme="@style/RadioButtonTheme" />

            <RadioButton
                android:id="@+id/rb_price_high_to_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_high_to_low"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/regular"
                android:theme="@style/RadioButtonTheme" />



            <RadioButton
                android:id="@+id/rb_name_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_asc"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/regular"
                android:theme="@style/RadioButtonTheme" />

            <RadioButton
                android:id="@+id/rb_name_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_desc"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/regular"
                android:theme="@style/RadioButtonTheme" />
        </RadioGroup>
    </LinearLayout>



</RelativeLayout>