<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.ForgetPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_45sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_circle"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_500sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_register" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/et_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@drawable/grey_rounded"
                android:hint="@string/enter_email_mn"
                android:inputType="text"
                android:padding="@dimen/dp_16"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_enter"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/enter_your_email"
                android:textSize="@dimen/sp_16" />

            <RadioGroup
                android:id="@+id/rb_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dp_16"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@string/by_email"
                    android:theme="@style/RadioButtonTheme" />

                <RadioButton
                    android:id="@+id/rb_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@string/by_sms"
                    android:theme="@style/RadioButtonTheme" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rb_choice"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/button_bg"
                android:text="@string/submit"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:theme="@style/RadioButtonTheme"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>